add pl text to the website

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -32,8 +32,8 @@ html {
   --header4: calc(2.4rem + 1vw);
   --text: calc(1.5rem + 1vw);
   --big: calc(6rem + 1vw);
-  --special-color: #906272;
-  --background-color: #414141;
+  --special-color: #D999B9;
+  --background-color: #54494B;
   --gray-text: #525252;
   scroll-behavior: smooth;
 }
