--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,6 @@
 @import "~normalize.css";
 
 @import "_variables";
-@import "modules/hello.scss";
 
 /* Global Styles */
 
@@ -48,12 +47,15 @@ input,
 a,
 p {
   font-size: var(--text);
+  text-align: center;
 }
 h2 {
   font-size: var(--header2);
+  
 }
 h3 {
   font-size: var(--header3);
+  text-align: center;
 }
 h4,
 h5 {
@@ -136,40 +138,11 @@ nav {
   position: relative;
   z-index: 1;
 }
-.hero-elena {
+.hero-jakub {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-
-/*ANIMATIONS */
-
-@keyframes opening {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes plant-entrance {
-  from {
-    transform: translateY(10%) rotateZ(-10deg) rotateX(-90deg);
-  }
-  to {
-    transform: translateY(0%) rotateZ(0deg) rotateX(0deg);
-  }
-}
-@keyframes plant-shake {
-  from {
-    transform: rotateZ(-5deg);
-  }
-  to {
-    transform: rotateZ(0deg);
-  }
-}
-
 .burger,
 .menu-check {
   display: none;
