remove english version

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,8 +31,8 @@ html {
   --header4: calc(2.4rem + 1vw);
   --text: calc(1.5rem + 1vw);
   --big: calc(6rem + 1vw);
-  --special-color: #D999B9;
-  --background-color: #54494B;
+  --special-color: #457b9d;
+  --background-color: #463f3a;
   --gray-text: #525252;
   scroll-behavior: smooth;
 }
