add youtube and twitter link

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -32,7 +32,7 @@ html {
   --text: calc(1.5rem + 1vw);
   --big: calc(6rem + 1vw);
   --special-color: #457b9d;
-  --background-color: #463f3a;
+  --background-color: #403d39;
   --gray-text: #525252;
   scroll-behavior: smooth;
 }
